--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Calibri', sans-serif;
-    background: url('https://i.ibb.co/X71DbQJ/LOJA-5.png') no-repeat center center fixed;
+    background: url('https://i.ibb.co/4R7hWXh/LOJA-6.png') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -29,7 +29,7 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
     width: 100%;
-    max-width: 400px;
+    max-width: 350px;
     box-sizing: border-box;
 }
 
@@ -119,7 +119,7 @@ body {
 /* Estilo para o título */
 h1 {
     margin: 0;
-    font-size: 24px;
+    font-size: 26.5px;
     color: #fff;
     margin-bottom: 15px;
     font-weight: bold;
